--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   ngix:
     image: "nginx"
     volumes:
-      - /home/eurus/uni/LTW-PROJ/LTW_PRJ/HTML:/usr/share/nginx/html
+      - ./HTML:/usr/share/nginx/html
     ports:
       - "8080:80"
       - "4443:443"
