--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - NODE_ENV=production
     volumes:
       - ./node1c:/home/node
+    ports:
+      - "8081:8081"
     expose:
       - 8081
     command: "npm start"
