--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,15 @@ services:
     image: "nginx"
     volumes:
       - ./HTML:/usr/share/nginx/html
+      - ./nginx_configs/conf.d:/etc/nginx/conf.d
+      - ./nginx_configs/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8080:80"
       - "4443:443"
     expose:
       - 80
       - 443
-  node:
+  node1:
     image: "node:8"
     user: node
     working_dir: /home/node
@@ -23,12 +25,25 @@ services:
     expose:
       - 8081
     command: "npm start"
-  couch:
-    image: "couchdb"
+  node2:
+    image: "node:8"
+    user: node
+    working_dir: /home/node
     environment:
-      - COUCHDB_USER=admin
-      - COUCHDB_PASSWORD=password
-    ports: 
-      - "5984:5984"
-    expose: 
-      - 5984
+      - NODE_ENV=production
+    volumes:
+      - ./node1c:/home/node
+    ports:
+      - "8082:8081"
+    expose:
+      - 8081
+    command: "npm start"
+#  couch:
+#    image: "couchdb"
+#    environment:
+#      - COUCHDB_USER=admin
+#      - COUCHDB_PASSWORD=password
+#    ports: 
+#      - "5984:5984"
+#    expose: 
+#      - 5984
