LOADBALANCER FUNZIONANTE SU localhost:8080/appserver/ vedi bene diario

--- a/nginx_configs/conf.d/load-balancer.conf
+++ b/nginx_configs/conf.d/load-balancer.conf
@@ -6,7 +6,11 @@ upstream nodejs {
 
 server {
 # in the 'server' block for HTTPS traffic
-location /webapp/ {
-    proxy_pass http://nodejs;
-}
+    location /appserver/ {
+        proxy_pass http://nodejs;
+    }
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+    }
 }
